objects/fferpcore__UserManagementTemplateData__mdt.object
<CustomObject>
    <description>The data to be applied to a template from a plugin during the execution of the User Information Batch Job.</description>
    <fields>
        <fullName>fferpcore__Plugin__c</fullName>
        <description>Lookup to the user information plugin to use for this user management data.</description>
        <inlineHelpText>Lookup to the user information plugin to use for this user management data.</inlineHelpText>
        <label>Plugin</label>
        <referenceTo>fferpcore__Plugin__mdt</referenceTo>
        <relationshipLabel>User Management Data</relationshipLabel>
        <relationshipName>UserManagementData</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>fferpcore__Template__c</fullName>
        <description>Template to which this user management template data belongs.</description>
        <inlineHelpText>Template to which this user management template data belongs.</inlineHelpText>
        <label>User Management Template</label>
        <referenceTo>fferpcore__UserManagementTemplate__mdt</referenceTo>
        <relationshipLabel>Data</relationshipLabel>
        <relationshipName>Data</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>fferpcore__Value__c</fullName>
        <description>Value of the template data to be applied using the Plugin.</description>
        <inlineHelpText>Value of the template data to be applied using the Plugin.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>User Management Template Data</label>
    <pluralLabel>User Management Template Data</pluralLabel>
</CustomObject>